added some css and js

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
     <title>Daniel Stich Portfolio</title>
     <meta name="description" content="DS Portfolio">
     <meta name="author" content="Daniel Stich">
+    <script src="/app.js" defer></script>
+    <link rel="stylesheet" href="/style.css">
 
 </head>
 
 <body>
-    <h1>This is my website</h1>
+    <header>
+        <h1 id="header1">This is my website</h1>
+        <h1>Daniel Stich</h1>
+    </header>
+    
 </body>
 </html>
