updated projects with first project

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,8 @@
             <section id="Projects">
                 
                 
-                <div class="card">
-                    <p>Project card</p>
-                    <p>+</p>                    
-                    <button disabled="disabled">
-                        See it!
-                    </button>
+                <div class="cardfilled">
+                    <a href="/public/projects/N-Puzzle/"><img src="/public/img/n-puzzle.PNG" alt="N-Puzzle Preview"></a>                    
 
                 </div>
                 <div class="card">
