updated broken link

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 
                 
                 <div class="cardfilled">
-                    <a href="/public/projects/N-Puzzle/"><img src="/public/img/n-puzzle.PNG" alt="N-Puzzle Preview"></a>                    
+                    <a href="./projects/N-Puzzle/"><img src="./img/n-puzzle.PNG" alt="N-Puzzle Preview"></a>                    
 
                 </div>
                 <div class="card">
