added blog section

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,15 @@
         </section>
 
         <section id="Blog" style="display: none;">
-            Things I will write about
+            <aside id="BlogNav">
+                aside left
+            </aside>
+            <main id="BlogMain">
+                main middle
+            </main>
+            <aside>
+                aside right
+            </aside>
         </section>
 
         <section id="Home">
